[sbt2] Prepare the integration harness for SBT 2 #TW-102637
Add the pinned SBT 2.0.4 runtime with its Scala 3/SBT 2 artifact coordinates and fixture location. Keep the SBT 1 runtime path unchanged.

Adapt nested SBT 2 invocation to command arguments, isolated local task caches, a short global-server socket path, and Java 17. Thread explicit TeamCity-environment control through test cases so the harness can prove that direct-loading the packaged jar remains inactive outside TeamCity.

Co-authored-by: Codex <noreply@openai.com>